week01/styles/chamber-site-plan.css
:root{
    --primary-background: #FFFFFF;
    --second-background: #002349;
    --accent-background: #f9f9f9;

    --header-font: 'Poppins', serif;
    --body-font: 'Inter', sans-serif;

    --first-font-color: #fff;
    --second-font-color: #000;
    --accent-font-color: #002349;
}

/* Global Styles */
body {
    font-family: var(--body-font);
    margin: 0;
    padding: 0;
    background-color: #ffffff;
    color: var(--second-font-color);
    overflow-x: hidden;
}

h1, h2, h3 {
    font-family: var(--header-font);
    font-size: 40px;
}

h2{
    font-size: 30px;
    color: var(--accent-font-color);
}

h3{
    font-size: 22px;
    color: var(--accent-font-color);
}

header, footer{
    width: 100vw;
    left: 0;
    right: 0;
    box-sizing: border-box;
    padding: 10px 0;
    color: var(--first-font-color);
    background-color: var(--second-background);
    text-align: center;
}

main{
    margin: 0 auto;
    padding: 30px;
    text-align: center;
    max-width: 960px;

}

.card{
    background-color: var(--accent-background);
    border: 1px solid #002349;
    box-shadow: 0 10px 8px rgba(0, 0, 0, 0.1);
    padding: 20px;
    max-width: 90%;
    margin: 0 auto 40px;
    text-align: left;
    border-radius: 8px;
}

.colors{
    width: 100%;
    min-width: 300px;
    margin: 30px auto;
    text-align: center;
}

.colors th{
    background-color: transparent;
    padding: 15px;
    border-radius: 8px;
}
.colors td{
    border: 1px solid #002349;
    padding: 15px;
    border-radius: 8px;
}

.card.tipography .header-font{
    font-family: var(--header-font);
}

.card.tipography .body-font{
    font-family: var(--body-font);
}

.wireframe{
    padding: 0px;
    max-width: 90%;
    margin: 0 auto 40px;
}

.wireframe h1{
    padding-top: 40px;
    border-top-color: #ccc;
    border-top: 1px solid;
}

.wireframe .desktop-wireframe img{
    display: block;
    height: auto;
    max-width: 100%;

}

.wireframe .mobile-wireframe img{
    display: block;
    margin: 0 auto;
    max-width: 100%;
    height: auto;
    max-height: 200vh;
    padding: 0 10px;
}

@media only screen and (max-width:1040px){
    main{
        padding-top: 50px;
        max-width: 100%;
    }
}

